--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -4,7 +4,7 @@ body {
 h1 {
 	font-style: italic;
 	font-weight: bolder;
-	font-size: 45px;
+	font-size: 40px;
 }
 .Principle {
 	padding-left:20px;
@@ -13,7 +13,22 @@ h1 {
 	font-size: 1.2em;
 
 }
-Message {
-	padding-left: 40px;
+.Message {
+	padding-left:20px;
+	padding-top:10px;
+	padding-bottom: 15px;
+	font-weight: bold;
+	font-size: 1.2em;
+}
+.BoxMessage {
+	background-color: whitesmoke;
+	width: 70%;
+    padding: 16px;
+    text-align: center;
+    border: 1px solid #eee;
+    box-shadow: 0 2px 3px #ccc;
+    margin: 10px;
+    box-sizing: border-box;
+    cursor: pointer;
 }
 
