--- a/src/components/Rallies/Rallies.css
+++ b/src/components/Rallies/Rallies.css
@@ -1,20 +1,32 @@
 .Rallies {
-    display: flex;
+    /* display: flex;
     flex-flow: row wrap;
     justify-content: center;
     width: 80%;
-    margin: auto;
+    margin-left: 30px; */
+    /* margin: auto;  */
+}
+h2 {
+    color: blue;
+    margin-left: 30px;
+}
+intro {
+    color: red;
+}
+.Introduction {
+    /* font-size: 1.0em;
+    font-color: #2400 */
 }
 .EventDate {
-    font-size: 1.2em;
+    /* font-size: 1.2em;
     font-weight: bolder;
-    margin-left: 20px;
+    margin-left: 20px; */
 }
 .ChurchName {
-    font-size: 1.5em;
+    /* font-size: 1.5em;
     font-style: italic;
-    margin-left: 25px;
+    margin-left: 25px; */
 }
 .ChurchLocation {
-    margin-left: 35px;
+    /* margin-left: 35px; */
 }
