--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -15,6 +15,7 @@ h1 {
 }
 .Message {
 	padding-left:20px;
+	padding-right:20px;
 	padding-top:10px;
 	padding-bottom: 15px;
 	font-weight: bold;
@@ -30,5 +31,8 @@ h1 {
     margin: 10px;
     box-sizing: border-box;
     cursor: pointer;
+}
+.BasicParagraph {
+	padding: 0 20px 0 20px;
 }
 
