--- a/src/containers/P8/P8.css
+++ b/src/containers/P8/P8.css
@@ -22,6 +22,7 @@
 	color: #fa823f;
 }
 body {
-	background-color: #ffffff;
+	background-color: gainsboro;
 	margin-left: 25px;
+	margin-top: 56px;
 }
