--- a/src/components/Navigation/SideDrawer/SideDrawer.css
+++ b/src/components/Navigation/SideDrawer/SideDrawer.css
@@ -1,17 +1,34 @@
-.SideDrawer {
-    position: fixed;
-    width: 280px;
-    max-width: 70%;
+.side-drawer {
     height: 100%;
-    left: 0;
-    top: 0;
+    background: white;
+    box-shadow: 2px 0px 5px rgba(0,0,0,0.5);
+    position: fixed;
+    top:0;
+    left:0;
+    width: 70%;
+    max-width: 400px;
     z-index: 200;
-    background-color: white;
-    padding: 32px 16px;
-    box-sizing: border-box;
-    transition: transform 0.3s ease-out;
+}  
+.side-drawer ul {
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 100%;
 }
-
+.side-drawer li {
+    margin: 0.5rem 0;
+}
+.side-drawer a {
+    color: #521751;
+    text-decoration: none;
+    font-size: 1.2rem;
+}
+.side-drawer a:hover,
+.side-drawer a:active{
+    color: #fa923f;
+}
+/* 
 @media (min-width: 500px) {
     .SideDrawer {
         display: none;
@@ -29,4 +46,4 @@
 .Logo {
     height: 11%;
     margin-bottom: 32px;
-}
+}  */
