--- a/src/components/Navigation/SideDrawer/SideDrawer.css
+++ b/src/components/Navigation/SideDrawer/SideDrawer.css
@@ -1,11 +1,11 @@
 .side-drawer {
-    height: 100%;
+    height: 100px;
     background: white;
     box-shadow: 2px 0px 5px rgba(0,0,0,0.5);
     position: fixed;
     top:0;
     left:0;
-    width: 70%;
+    width: 150px;
     max-width: 400px;
     z-index: 200;
 }  
@@ -13,8 +13,7 @@
     list-style: none;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    height: 100%;
+    justify-content: top;
 }
 .side-drawer li {
     margin: 0.5rem 0;
