--- a/src/components/Rally/Rally.css
+++ b/src/components/Rally/Rally.css
@@ -34,6 +34,8 @@ h2 {
     box-shadow: 0 2px 3px #808080;
     margin: 10px;
     box-sizing: border-box;
-    
-
+}
+.EventTimes {
+    text-align: center;
+    padding-top: 10px;
 }
