--- a/src/components/UI/EventDate/EventDate.css
+++ b/src/components/UI/EventDate/EventDate.css
@@ -6,9 +6,10 @@
     border: 3px solid #6A5ACD;
     box-shadow: 0 2px 3px #808080;
     margin-left: 0px;
-    
-    padding: 10px;
-    padding-top: 10px;
+ 
+    padding: 5px;
+    padding-bottom: 0px;
+    padding-top: 0px;
     box-sizing: border-box;
     width: 50px;
     height: 45px;
@@ -17,13 +18,15 @@
     /* this is the month/day/year */
     font-size: 1.5em;
     color: blue;
-    margin-left: 0px;
+    margin-left: 0px;;
     text-align: right;
     padding-left:0px;
+    
 }
 .TheEvent {
     padding-top: 10px;
-    padding-bottom: 25px;
+    padding-bottom: 30px;
+    margin-bottom: 10px;
 }
 .EventDOW {
     font-size: 1.5em;
