--- a/src/components/UI/EventTimes/EventTimes.css
+++ b/src/components/UI/EventTimes/EventTimes.css
@@ -1,4 +1,4 @@
-.VenueTimes {
+.EventTimes {
     /* padding-top: 15px;
     background-color: transparent;
     border: none;
@@ -10,7 +10,8 @@
     margin: 10px;
     font-weight: bold;
     font-size: 1.3em; */
-    padding-top: 1.2em;
+    padding-top: 1.5em;
+    font-weight: bold;
     font-size: 1.2em;
     text-align: center;
 }
