--- a/src/containers/Register/ContactData/ContactData.css
+++ b/src/containers/Register/ContactData/ContactData.css
@@ -59,3 +59,11 @@
     text-align: left;
     top: -10;
 }
+.RegEmailLabel{
+    padding-top: 10px;
+    font-size: 1.2em;
+}
+.RegEmail{
+    font-size: 2em;
+    font-style: italic;
+}
