--- a/src/components/Rally/Rally.css
+++ b/src/components/Rally/Rally.css
@@ -71,6 +71,11 @@ h2 {
     margin-bottom: 10px;
 }
 #map {
-    height: 100%;
+    height: 100vh;
 }
+html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+  }
 
